SWIG (Simplified Wrapper and Interface Generator)

Version 1.3 Alpha 5 
===================

9/18/00 : mkoeppe
	  Incorporated patch #101430, fixing bugs in the Guile module: 
	  1. Some arguments were erroneously taken as *optional* arguments when
	     ignored arguments were present. 
	  2. Guile 1.3.4 was not supported since functions introduced in Guile
	      1.4 were used.	  
	  3. Added handling of `const char *'.

9/17/00 : beazley
          Fixed problem with failed assertion and large files.

9/17/00 : beazley
          Fixed problem with the '%' character appearing in added methods
          and function bodies.  Preprocessor bug.

Version 1.3 Alpha 4 (September 4, 2000)
======================================

9/3/00  : ttn
          Added instructions for maintainers in Examples/README on how
          to make examples also be useful in the testing framework.
          Also, "make check" now uses ./Lib by via env var `SWIG_LIB'.
          This is overridable like so:
             make chk-swiglib=/my/experimental/swig/Lib check

9/3/00  : beazley
          Added $typemap variable to typemaps.  This gets replaced with
          a string indicating the typemap that is applied.  Feature
          request from rsalz.

9/3/00  : beazley
          Experimental optimization to code generation for virtual
          member functions.  If you have two classes like this:

                 class A() {
                   virtual void foo();
                 }

                 class B() : public A {
                   virtual void foo();
                 }

          Swig now will generate a single wrapper function for this

                A_foo(A *a) {
                    a->foo();
                }

          and use it as the implementation of both A_foo() and B_foo().
          This optimization only takes place if both methods are declared
          as virtual and both take identical parameters.
          *** EXPERIMENTAL FEATURE ***

9/3/00  : beazley